CAMBIO EN GENERAL

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="p-3 m-0 border-0 bd-example">
-</head>
-        <!--inicio de menu-->
+  
+  
   <body>
+        <!--inicio de menu de navegacion-->
+  
     
     <nav class="navbar navbar-expand-sm bg-secondary navbar-dark" style="background-color: hsl(205, 64%, 42%);">
         <div class="container-fluid">
+            <!--logo-->
             <a><img src="img\WhatsApp Image 2023-02-14 at 20.08.03 (4).jpeg" alt="logo" width="80" height="80">
-
             </a>
+            <!--links de navegacion-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
              </button>
@@ -56,7 +58,7 @@
                       <p>Proyectos de Arquitectura</p>
                     </div>
             
-                <!--funcion de un arquitecto-->
+                <!--texto de arquitectura-->
                     <div class="container-fluid display-3 text-center">
                     <p>¿QUE SABEMOS DE ARQUITECTURA?</p>
                     </div>
